--- a/client/src/assets/sass/base/_base.scss
+++ b/client/src/assets/sass/base/_base.scss
@@ -8,7 +8,23 @@
 
 html {
     box-sizing: border-box;
-    font-size: 62.5%; // 10px/16px = 62.5% -> 1rem = 10px
+    font-size:  100%; // 10px/16px = 62.5% -> 1rem = 10px
+
+    --header-height: 3rem;
+    --nav-width: 68px;
+  
+    /*===== Colors =====*/
+    --first-color: #050505dc;
+    // --first-color: #6C63FF;
+    --first-color-hover:#050505;
+    --first-color-light: #c4c0d6;
+    --white-color: #F7F6FB;
+  
+  
+    --normal-font-size: 1rem;
+  
+    /*===== z index =====*/
+    --z-fixed: 100;
 }
 
 
@@ -18,6 +34,13 @@ body {
     font-weight:400;
     line-height: 1.6;
     height: 100vh;
+
+    position: relative;
+    margin: var(--header-height) 0 0 0;
+    // padding: 0 1rem;
+    padding: 0;
+    font-size: var(--normal-font-size);
+    transition: .5s;
 
    /*
  *  START STYLE Scroll Bars
@@ -48,4 +71,9 @@ body {
 /*
  *  END STYLE Scroll Bars
  */
+}
+
+
+a{
+  text-decoration: none;
 }
